--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "chart.js": "^3.9.1",
+    "chart.js-scatter": "^1.1.4",
     "chartjs-adapter-luxon": "^1.2.0",
     "luxon": "^3.1.0",
     "react": "^18.2.0",
